<resources>
    <string name="app_name">AutthTest</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">441041963296979
    </string>
        <string name="facebook_login_protocol_scheme" translatable="false">fb441041963296979
    </string>
    <string name="adapterBtnDelete">Supprimer</string>
    <string name="btnSelectImage">Choisir une image</string>
    <string name="btnConfirmer">Archiver</string>
    <string name="button_connexion">Connexion</string>
    <string name="btn_ajouter">Ajouter</string>
    <string name="btn_archiver">Archiver</string>
    <string name="btn_recuperer">Récuperer</string>
    <string name="btn_prendre_une_photo">Prendre une photo</string>
    <string name="Instructions1">- Appuyez sur l\'icone en haut à droite de votre écran pour créer ou supprimer des tags.</string>
    <string name="Instructions2">- Appuyez sur le bouton Archiver, en bas à gauche de votre écran, pour archiver une image.</string>
    <string name="Instructions3">- Appuyez sur le bouton Récupérer, en bas à droite de votre écran, pour récupérer ou supprimer des images.</string>
    <string name="Edit_text_archivage_hint">Courte description (optionel)</string>
</resources>
